gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test20023.d
version https://git-lfs.github.com/spec/v1
oid sha256:90acee4073bccf8537902a264dc15f3a9d2d957a81f5db034b8b4ee86a866c77
size 424
